[tool.poetry]
name = "hugging_face_tutorial"
version = "0.1.0"
description = ""
authors = ["Takuro Yamazaki <takuro.yamazaki.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.11.1"
sklearn = "^0.0"
torch = "^1.8.1"
transformers = "^4.6.0"
notebook = "^6.3.0"
jupyterlab = "^3.0.15"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
